# conexio-firmware-sdk

./: README.md  west-nrf.yml
samples/accelerometer/: CMakeLists.txt  README.rst  prj.conf
samples/at_client/: README.rst  prj.conf  sample.yaml
samples/at_monitor/: README.rst  prj.conf
samples/battery/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/bme280/: README.rst  sample.yaml
samples/cellular_battery_monitor/: README.rst
samples/conexio_stratus/: RTOS_FOUNDATIONS.md  SAMPLE_INDEX.md
samples/datacake/: CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml
samples/datacake/boards/: conexio_stratus_ns.overlay
samples/datacake/child_image/: spm.conf
samples/datacake/child_image/spm/: prj.conf
samples/datacake/src/: main.c
samples/datacake/src/battery/: battery.c
samples/datacake/src/env_sensors/: CMakeLists.txt  env_sensors.c  env_sensors.h
samples/datacake_bme280/: CMakeLists.txt  Kconfig  README.md  prj.conf
samples/dps310_sensor/: README.rst  prj.conf  sample.yaml
samples/edge_impulse/: README.md
samples/gnss/: CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml
samples/golioth/: README.md
samples/gps/: prj.conf  sample.yaml
samples/grove_buzzzer/: CMakeLists.txt  README.rst  sample.yaml
samples/iotcreators/: CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml
samples/led_blink/: README.rst  generate_firmware.py  prj.conf
samples/memfault/: CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml
samples/mqtt_control/: CMakeLists.txt  prj.conf  sample.yaml
samples/nRF_cloud_client/: CMakeLists.txt  README.rst  generate_firmware.py  prj.conf  sample.yaml
samples/sht4x/: Kconfig  README.rst  (+2 more)
samples/watchdog_timer/: CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml
samples/watchdog_timer/src/: main.c
samples/watchdog_timer/src/watchdog/: watchdog.c
scripts/: patch_mcuboot.sh
(+301 files in other folders)
